fixed the issue with scrollbars on the map-sidebar

--- a/src/nyc_trees/sass/partials/_survey.scss
+++ b/src/nyc_trees/sass/partials/_survey.scss
@@ -5,7 +5,8 @@
 
     .map-sidebar {
         max-height: 75%;
-        overflow: scroll;
+        overflow: auto;
+        overflow-x: hidden;
         box-shadow: 0 1px 2px rgba(black, .2);
     }
 }
